--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/ContactBackupOld/ContactBackupOld.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/ContactBackupOld/ContactBackupOld.xib
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ContactBackupOld" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ContactBackupOld" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="166"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -43,7 +41,7 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMn-95-4CQ">
-                    <rect key="frame" x="45" y="49" width="314" height="21"/>
+                    <rect key="frame" x="45" y="49.5" width="314" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="8M7-f9-AOF"/>
                     </constraints>
@@ -52,7 +50,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4I-8h-vHI">
-                    <rect key="frame" x="15" y="75" width="345" height="46"/>
+                    <rect key="frame" x="15" y="75.5" width="345" height="46"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="46" id="t3n-eI-5CK"/>
                     </constraints>
@@ -61,14 +59,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ad6-gn-bT8">
-                    <rect key="frame" x="0.0" y="121" width="375" height="1"/>
+                    <rect key="frame" x="0.0" y="121.5" width="375" height="1"/>
                     <color key="backgroundColor" white="0.80306919642857144" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="3Uf-o5-S3p"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="78X-hs-2ha">
-                    <rect key="frame" x="14" y="122" width="46" height="44"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="78X-hs-2ha">
+                    <rect key="frame" x="14" y="122.5" width="46" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="5yY-af-Ipu"/>
                     </constraints>
@@ -78,7 +76,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WQO-jr-hnY">
-                    <rect key="frame" x="319" y="122" width="42" height="44"/>
+                    <rect key="frame" x="319" y="122.5" width="42" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="kMq-23-qGe"/>
                     </constraints>
@@ -114,6 +112,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="bacupButton" destination="78X-hs-2ha" id="8wB-H8-Pxq"/>
+                <outlet property="closeButton" destination="wbC-qq-X6Y" id="r23-fG-ZSa"/>
                 <outlet property="headerLabel" destination="6s0-fY-tPe" id="W4O-nK-4dd"/>
                 <outlet property="lastUpdateLabel" destination="WQO-jr-hnY" id="ZSJ-Vi-O4S"/>
                 <outlet property="subTitle" destination="u4I-8h-vHI" id="BcG-KN-QK5"/>
